force-app/main/default/objects/FIN_SystemDataLoadLog__c/FIN_SystemDataLoadLog__c.object-meta.xml
<CustomObject>
    <label>Finance Raw Data Logs</label>
    <nameField>
        <displayFormat>SDLL-{0000000000}</displayFormat>
        <label>System Data Load Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Raw Data Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>