force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_BusinessRuleEndTime__c.field-meta.xml
<CustomField>
    <fullName>FIN_BusinessRuleEndTime__c</fullName>
    <label>Run End Time</label>
    <type>DateTime</type>
</CustomField>