force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_BusinessRuleProcessCompleteStatus__c.field-meta.xml
<CustomField>
    <fullName>FIN_BusinessRuleProcessCompleteStatus__c</fullName>
    <label>Business Rule Process Complete Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>