force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_BusinessRuleProcessStatusFlag__c.field-meta.xml
<CustomField>
    <fullName>FIN_BusinessRuleProcessStatusFlag__c</fullName>
    <formula>IMAGE(
CASE(FIN_BusinessRuleProcessCompleteStatus__c,
&quot;Success&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;In-Progress&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Failure&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Process Status Flag</label>
    <type>Text</type>
</CustomField>