force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_BusinessRuleStartTime__c.field-meta.xml
<CustomField>
    <fullName>FIN_BusinessRuleStartTime__c</fullName>
    <label>Business Rule Start Time</label>
    <type>DateTime</type>
</CustomField>