force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_Delta_Amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_Delta_Amount__c</fullName>
    <formula>FIN_StagingTableSumOfPayment__c -  Sum_of_Payment_Approver_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>