force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_File_Name__c.field-meta.xml
<CustomField>
    <fullName>FIN_File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>