force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_O_OPCreationEndTime__c.field-meta.xml
<CustomField>
    <fullName>FIN_O_OPCreationEndTime__c</fullName>
    <label>Sales &amp; Transactions Creation End Time</label>
    <type>DateTime</type>
</CustomField>