force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_O_OPCreationStartTime__c.field-meta.xml
<CustomField>
    <fullName>FIN_O_OPCreationStartTime__c</fullName>
    <label>Order and OrdProduct Creation Start Time</label>
    <type>DateTime</type>
</CustomField>