force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_Ord_OrdProdCreatCmpltStatus__c.field-meta.xml
<CustomField>
    <fullName>FIN_Ord_OrdProdCreatCmpltStatus__c</fullName>
    <description>Order and Order Product Creation Completion Status</description>
    <label>Ord and Ord Prod Creation Compl Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>