force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_OrderToGet__c.field-meta.xml
<CustomField>
    <fullName>FIN_OrderToGet__c</fullName>
    <label>Order to process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>