force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_Process__c.field-meta.xml
<CustomField>
    <fullName>FIN_Process__c</fullName>
    <label>Process</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Payment_Distribution</fullName>
                <label>Payment Distribution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>