force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_ProcessCompletionStatus__c.field-meta.xml
<CustomField>
    <fullName>FIN_ProcessCompletionStatus__c</fullName>
    <formula>IF ( AND ( ISPICKVAL(FIN_StagingTableLoadCompleteStatus__c,&quot;SUCCESS&quot;),ISPICKVAL(FIN_BusinessRuleProcessCompleteStatus__c,&quot;SUCCESS&quot;)) , &quot;Success&quot; , &quot;In-Progress&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Status</label>
    <type>Text</type>
</CustomField>