force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_ProcessDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_ProcessDate__c</fullName>
    <label>Process Date</label>
    <type>DateTime</type>
</CustomField>