force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_Raw_Total_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>FIN_Raw_Total_Record_Count__c</fullName>
    <label>Raw Total Record  Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>