force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_RecordsProcessed__c.field-meta.xml
<CustomField>
    <fullName>FIN_RecordsProcessed__c</fullName>
    <label>Processed records information</label>
    <type>TextArea</type>
</CustomField>