force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_ReturnedFromSaleTransactions__c.field-meta.xml
<CustomField>
    <fullName>FIN_ReturnedFromSaleTransactions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates was the success status returned from sales transactions creation</description>
    <label>Returned from sale transactions</label>
    <type>Checkbox</type>
</CustomField>