force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_SalesforceRulesEndTime__c.field-meta.xml
<CustomField>
    <fullName>FIN_SalesforceRulesEndTime__c</fullName>
    <label>Salesforce rules end time</label>
    <type>DateTime</type>
</CustomField>