force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_SalesforceRulesStartTime__c.field-meta.xml
<CustomField>
    <fullName>FIN_SalesforceRulesStartTime__c</fullName>
    <label>Salesforce rules start time</label>
    <type>DateTime</type>
</CustomField>