force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_SalesforceRulesStatus__c.field-meta.xml
<CustomField>
    <fullName>FIN_SalesforceRulesStatus__c</fullName>
    <label>Salesforce rules status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RulesStatus</valueSetName>
    </valueSet>
</CustomField>