force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/Fin_Staging_Load_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Fin_Staging_Load_Status_Flag__c</fullName>
    <formula>IMAGE( 
CASE(FIN_StagingTableLoadCompleteStatus__c, 
&quot;Success&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;In-Progress&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Failure&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raw Load Status Flag</label>
    <type>Text</type>
</CustomField>