force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_StagingTableLoadBusinessApproved__c.field-meta.xml
<CustomField>
    <fullName>FIN_StagingTableLoadBusinessApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staging Table Load Business Approved</label>
    <type>Checkbox</type>
</CustomField>