force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_StagingTableLoadCompleteStatus__c.field-meta.xml
<CustomField>
    <fullName>FIN_StagingTableLoadCompleteStatus__c</fullName>
    <label>Raw Load Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
                <default>true</default>
                <label>In-Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>