force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_StagingTableLoadEndTime__c.field-meta.xml
<CustomField>
    <fullName>FIN_StagingTableLoadEndTime__c</fullName>
    <label>Sync End Time</label>
    <type>DateTime</type>
</CustomField>