force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_StagingTableLoadStartTime__c.field-meta.xml
<CustomField>
    <fullName>FIN_StagingTableLoadStartTime__c</fullName>
    <label>Sync Start Time</label>
    <type>DateTime</type>
</CustomField>