force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/FIN_StagingTableSumOfPayment__c.field-meta.xml
<CustomField>
    <fullName>FIN_StagingTableSumOfPayment__c</fullName>
    <label>Raw Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>