force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/HerokuExtId__c.field-meta.xml
<CustomField>
    <fullName>HerokuExtId__c</fullName>
    <externalId>true</externalId>
    <label>HerokuExtId</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>