force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/IsBackfillLoad__c.field-meta.xml
<CustomField>
    <fullName>IsBackfillLoad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is backfill load</label>
    <type>Checkbox</type>
</CustomField>