force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/isMockup__c.field-meta.xml
<CustomField>
    <fullName>isMockup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMockup</label>
    <type>Checkbox</type>
</CustomField>