force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/Process_Status_Image_Flag__c.field-meta.xml
<CustomField>
    <fullName>Process_Status_Image_Flag__c</fullName>
    <formula>IMAGE( 
CASE( FIN_ProcessCompletionStatus__c, 
&quot;Success&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;In-Progress&quot;, &quot;/img/samples/flag_yellow.gif&quot;, &quot;/img/samples/flag_red.gif&quot;), 
&quot;Status Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process  Status Flag</label>
    <type>Text</type>
</CustomField>