force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related sales</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Finance Raw Data Logs</relationshipLabel>
    <relationshipName>Finance_Raw_Data_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>