force-app/main/default/objects/FIN_SystemDataLoadLog__c/fields/Sum_of_Payment_Approver_Value__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Payment_Approver_Value__c</fullName>
    <label>Sum of Payment - Approver Value</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>