force-app/main/default/objects/FIN_SystemDataLoadLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_File_Name__c</columns>
    <columns>FIN_Process__c</columns>
    <columns>FIN_ProcessDate__c</columns>
    <columns>FIN_BusinessRuleEndTime__c</columns>
    <columns>FIN_BusinessRuleProcessStatusFlag__c</columns>
    <columns>FIN_BusinessRuleProcessCompleteStatus__c</columns>
    <columns>FIN_BusinessRuleStartTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>